# keep-to-notion

./: .gitignore  Cargo.toml  README.md
keep-to-notion/: Cargo.toml  README.md
keep-to-notion/src/: main.rs
src/: main.rs
