[package]
name = "keep-to-notion"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2.4.0"
scraper = "0.18.1"
regex = "1.10.4"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
zip = "0.5"